--- a/index.html
+++ b/index.html
@@ -733,7 +733,7 @@ function showSlides(n) {
         </div>
         <div class="footer-section">
             <h3>Contato</h3>
-            <p>Email: exemplo@empresa.com</p>
+            <p>Email: team.acrise@gmail.com</p>
         </div>
     </div>
     <div class="footer-bottom">
