--- a/projeto.html
+++ b/projeto.html
@@ -103,7 +103,7 @@
         </div>
         <div class="footer-section">
             <h3>Contato</h3>
-            <p>Email: exemplo@empresa.com</p>
+            <p>Email: team.acrise@gmail.com</p>
 
         </div>
     </div>
